* Fix build
* lower limestone spawn rate
* lower chalk crafting count
* fix mana cost being being able to go into negatives